# github-copilot-upgrading

.github/workflows/: python-tests.yml
workshop/upgraded/: pyproject.toml
workshop/upgraded/guachi.egg-info/: PKG-INFO  SOURCES.txt
workshop/upgraded/guachi/tests/: __init__.py
