[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "guachi"
version = "0.0.6"
description = "Global, persistent configurations as dictionaries"
authors = [
    { name = "Alfredo Deza", email = "alfredodeza@gmail.com" }
]
license = { text = "MIT" }
readme = "README.rst"
requires-python = ">=3.6"
dependencies = []

[project.urls]
Homepage = "http://code.google.com/p/guachi"
